# mezzo

./: Cargo.toml  README.md  Xargo.toml  makefile  x86_64-mezzo.json
etc/: setup-cross-compilation-toolchain.sh
libs/bumpalloc/: Cargo.toml
libs/bumpalloc/src/: lib.rs
libs/holealloc/: Cargo.toml
libs/holealloc/src/: lib.rs
src/: lib.rs  vga.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long-mode-init.asm  multiboot-header.asm
src/int/: handlers.rs  idt.rs  mod.rs
src/mem/: area_frame_allocator.rs  mod.rs
src/mem/paging/: entry.rs  mapper.rs  mod.rs  table.rs  tpage.rs
