[package]
name = "mezzo"
version = "0.1.0"
authors = ["Nick Platt <platt.nicholas@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "^0.7.0"
multiboot2  = "^0.1.0"
rlibc = "^1.0.0"
spin = "^0.3.5"

[dependencies.x86]
version = "^0.8.0"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
